# devcontainer-template

./: .gitignore  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
